require-rooster.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: ns-must-have-rooster
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["HelmRelease"]
  parameters:
    labels: ["rooster"]
