required-registry-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sinvalidRegistry
spec:
  crd:
    spec:
      names:
        kind: K8sInvalidRegistry
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          properties:
            invalidName:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiresource
        violation[{"msg": msg}, "details": {"invalid_registry": image}] {
          input.review.object.kind == "Pod"
          some i
          image := input.review.object.spec.containers[i].image
          required := input.parameters.registry
          not startswith(image,required)
          msg := ("invalid registry %v provided", image) 
        }
