test.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: ns-must-have-turtle
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["HelmRelease"]
  parameters:
    labels: ["turtle"]
